--- a/src/PS.Fluxly_Shortener/PS.Fluxly_Shortener.API/appsettings.json
+++ b/src/PS.Fluxly_Shortener/PS.Fluxly_Shortener.API/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "Redis": {
+    "ConnectionString": "localhost:6379"
+  },
+
+  "Shortener": {
+    "BaseUrl": "https://localhost:7248/"
+  }
+
 }
