--- a/src/PS.Fluxly_Shortener/PS.Fluxly_Shortener.Web/Properties/launchSettings.json
+++ b/src/PS.Fluxly_Shortener/PS.Fluxly_Shortener.Web/Properties/launchSettings.json
@@ -2,11 +2,12 @@
   "profiles": {
     "http": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5002"
+      "applicationUrl": "http://localhost:5253"
     },
     "https": {
       "commandName": "Project",
@@ -15,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7248;http://localhost:5002"
+      "applicationUrl": "https://localhost:7202;http://localhost:5253"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -30,8 +31,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:61384/",
-      "sslPort": 44393
+      "applicationUrl": "http://localhost:61405/",
+      "sslPort": 44324
     }
   }
 }
